# git-pair

./: CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  check.sh  fix.sh  hook_test.txt  install.sh  integration_test.sh  manual_test.txt  multi_test.txt  simplified_test.txt  test_global.txt  uninstall.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
